--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ header {
 
 /* header */
 
-header .header-logo .img {
+header {
   vertical-align: middle;
+  padding-left: 20px;
 }
 
 .logo {
@@ -28,3 +29,37 @@ header .header-logo .img {
 }
 
 /* utili */
+
+.container {
+  max-width: 700px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  width: 1100px;
+  height: 600px;
+}
+
+#top-container {
+  padding-top: 20px;
+}
+
+.top-container-left {
+  background-color: rgb(0, 157, 255);
+  width: 100px;
+  height: 50px;
+  color: white;
+  font-size: 1.2rem;
+  margin: 20px;
+  border-style: solid;
+}
+
+.top-container-right {
+  background-color: white(0, 255, 42);
+  width: 100px;
+  height: 50px;
+  color: rgb(180, 177, 177);
+  font-size: 1.2rem;
+  margin: 20px;
+  border-style: solid;
+}
