--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,13 @@ h1 {
   margin: 20px;
   border-style: solid;
 }
+
+.small-container {
+  background-color: rgb(0, 157, 255);
+  width: 80px;
+  height: 50px;
+  color: white;
+  font-size: 1.2rem;
+  margin: 20px;
+  border-style: solid;
+}
