--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,11 @@ h1 {
   border-style: solid;
 }
 
-.smal {
+.small {
   display: inline-block;
   padding-left: 90px;
+}
+
+.task {
+  margin-top: 30px;
 }
